--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Portfolio</title>
     <link rel="shortcut icon" href="styles/fav.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/e9d6327667.js" crossorigin="anonymous"></script>
+
 </head>
 <body class="open-sans-normal">
     <header class="ove">
@@ -23,7 +25,7 @@
             <p class="p1">Hi, I am</p>
             <h1>Akib Riad</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur rem odio quibusdam </p>
-            <button class="btn">Download CV</button><button class="btn1">Contact</button>
+            <button class="btn"><i class="fa-solid fa-download"></i> Download CV</button><button class="btn1"><i class="fa-solid fa-phone"></i> Contact</button>
         </div>
         <div>
         <img class="img" src="Mine.JPG" alt="Picture">
